--- a/about.adoc
+++ b/about.adoc
@@ -4,12 +4,36 @@
 Hello, I'm *Matthias* and an enthusiastic software craftsman
 experienced in *Java* and *Kotlin*. My main focus are the *Spring* and *Ktor* ecosystem.
 
+*PoisonedYouth* is my nickname I used since I started with online games long time ago and
+because it has been part of my life for so long, my personal blog will also take it as part
+of the name.
+
+'''
+
+My personal interests as software developer are:
+
+- Ktor
+
+- Exposed
+
+- Koin
+
+- Konsist
+
+- http4k
+
+- SpringBoot
+
+- Kotest
+
+- Arrow
+
 '''
 
 Beside developing software I'm a technical reviewer of
 several books in the ecosystem of Kotlin.
 
-Finished:
+*Finished*:
 
 https://kt.academy/book/kotlin_essentials[Kotlin Essentials] by Marcin Moskala
 
@@ -17,10 +41,11 @@ https://kt.academy/book/advanced_kotlin[Advanced Kotlin] by Marcin Moskala
 
 https://www.packtpub.com/en-us/product/kotlin-design-patterns-and-best-practices-9781805127765?srsltid=AfmBOopSNhnozCafEqOS3Za0B4oYO13PAmU1pIhz01pS7wTpwW5Eg5RX[Kotlin Design Patterns and Best Practices] by Alexey Soshin
 
-Currently in work
+*Currently in work*:
 
 Kotlin for Java Developers: Beginner to Advanced by José Dimas Luján Castillo
 
 '''
 
-Additionally I have an existing https://medium.com/@inzuael[Blog]
+Additionally, I have an existing https://medium.com/@inzuael[Blog] that will no longer be extended
+with new blog posts.
