Add "How to start with DynamoDB in your Ktor application (Part 2)" post.

--- a/_posts/2024-09-22-DynamoDB.adoc
+++ b/_posts/2024-09-22-DynamoDB.adoc
@@ -457,6 +457,8 @@ In the next post I will continue with topics like:
 - Use converters for custom data types.
 - Use batch processing for read and write operations.
 - Filter expressions and query conditionals.
+- Time-to-live (TTL).
+- Sparse index.
 
 '''
 
