--- a/_posts/2024-09-28-Kotlin-Delegated-Properties.adoc
+++ b/_posts/2024-09-28-Kotlin-Delegated-Properties.adoc
@@ -1,8 +1,8 @@
 = Delegated Properties in Kotlin
-:imagesdir: /assets/images/posts/2024/09/27
-:page-excerpt: Improve your code by delegating functionality.
+:imagesdir: /assets/images/posts/2024/09/28
+:page-excerpt: Improve your code by using delegated properties.
 :page-tags: [software, engineering, kotlin, delegated, properties]
-:revdate: 2024-09-27
+:revdate: 2024-09-28
 
 image:header.png[Header]
 
