--- a/_posts/2024-09-28-Kotlin-Delegated-Properties.adoc
+++ b/_posts/2024-09-28-Kotlin-Delegated-Properties.adoc
@@ -1,14 +1,20 @@
 = Delegated Properties in Kotlin
-:imagesdir: /assets/images/posts/2024/09/27
-:page-excerpt: Improve your code by delegating functionality.
+:imagesdir: /assets/images/posts/2024/09/28
+:page-excerpt: Improve your code by using delegated properties.
 :page-tags: [software, engineering, kotlin, delegated, properties]
-:revdate: 2024-09-27
+:revdate: 2024-09-28
 
 image:header.png[Header]
 
 This week I have once again learned to appreciate how property delegation makes the code I have written much clearer, simpler and saves me writing a lot of boilerplate code over and over again. Delegated properties in Kotlin provide a powerful mechanism for separating the logic of a property from its usage. In this post, I want to give an overview about how to use property delegation and which use-cases exist.
 
 == Introduction
+Delegation is a design pattern where an object handles a request by delegating it to a second object (the delegate). Instead of inheriting behavior from a parent class, a class can delegate specific tasks to helper classes. This promotes composition over inheritance, leading to more flexible and maintainable codebases.
+
+In traditional object-oriented programming (OOP), inheritance is often overused, leading to rigid hierarchies and tightly coupled components. Delegation offers an alternative by allowing classes to reuse functionality without being constrained by an inheritance structure.
+
+Kotlin embraces delegation with robust language support, making it easier to implement and use this pattern effectively.
+
 As already mentioned property delegation allows delegating the implementation of property accessors (i.e., `get` and `set` methods) to another object. Instead of writing the boilerplate code for getters and setters, (especially when using custom logic), I can leverage Kotlin's delegation mechanisms to handle these operations seamlessly.
 
 === The Concept
