Finalize "How to start with DynamoDB in your Ktor application (Part 2)" post.

--- a/_posts/2024-09-20-DynamoDB.adoc
+++ b/_posts/2024-09-20-DynamoDB.adoc
@@ -314,9 +314,7 @@ suspend fun add(product: Product): Unit = coroutineScope {
 
      suspend fun findAll(): List<Product> {
         return buildList {
-            table.scan().subscribe { page ->
-                page.items().stream().forEach { item -> add(item.toProduct()) }
-            }.await()
+            table.scan().asFlow().collect { it.items().stream().forEach { item -> add(item.toProduct()) } }
         }
     }
 
